Updated: bab 3 revisi

--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -58,7 +58,7 @@ Masalah linear programming memiliki ciri-ciri sebagai berikut:
 		
 \end{itemize}
 
-Dengan keempat karakteristik di atas, setiap masalah optimasi dapat dimodelkan ke bentuk masalah linear programming. Berikut contoh masalah linear progamming:
+Dengan keempat karakteristik di atas, setiap masalah optimasi dapat dimodelkan ke bentuk masalah linear programming. Berikut contoh masalah linear programming:
 
 \begin{equation*}
 	\begin{array}{r r c r c l}
